<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp"
    android:orientation="vertical">

    <EditText
        android:id="@+id/txtMaGV2"
        style="@style/edit_text_w"
        android:hint="@string/magv" />

    <EditText
        android:id="@+id/txtHoTenGV2"
        style="@style/edit_text_w"
        android:hint="@string/tengv" />

    <EditText
        android:id="@+id/txtSDTGV2"
        android:inputType="number"
        style="@style/edit_text_w"
        android:hint="@string/sodt" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:gravity="center">

        <Button
            android:id="@+id/btnThem2"
            style="@style/styleButton"
            android:drawableLeft="@drawable/ic_baseline_add_24"
            android:text="@string/them" />

        <Button
            android:id="@+id/btnClear2"
            style="@style/styleButton"
            android:drawableLeft="@drawable/ic_baseline_layers_clear_24"
            android:text="@string/clear" />

        <Button
            android:id="@+id/btnHuy2"
            style="@style/styleButton"
            android:drawableLeft="@drawable/ic_baseline_edit_24"
            android:text="@string/huy" />

    </LinearLayout>


</LinearLayout>